[metadata]
name = textAdventureRGS3
version = 0.0.1
description = Simple text adventure.
long_description = file: README.md, License.txt
keywords = one, two
license = AGPL-3.0-or-later

[options]
packages = textAdventureRGS3

[options.entry_points]
console_scripts =
    textAdventure = textAdventureRGS3.textAdventure3:main
 
 